--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
-
+  <script src="https://www.paypal.com/sdk/js?AY7jpEv0XoCKEv1lucKK5bWKh5rJ8SX4eHOuNV3t5vn8tn7Q420GcoLe-cdHPfiJ-cBHjxpVtKH5d_Qp"></script>
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
